# vkey

./: .gitignore  CMakeLists.txt  readme.md
ios/: build_xcode.sh
release/linux/: main.c  vkeytest
release/linux/include/: CMakeLists.txt  attest.h  auth.h  collect.h  db.h  encrypt.h  http.h  jwt.h  key.h  start.h
src/: attest.c  attest.h  auth.c  auth.h  claim.c  claim.h  collect.c  config.c  config.h  db.c  db.h  encrypt.c  encrypt.h  eth.c  eth.h  http.c  http.h  jwt.c  key.c  key.h  main.c  mqtt.c  mqtt.h  network.c  network.h  register.c  register.h  share.c  share.h  start.c  start.h  template.c  template.h  util.c  util.h  vkey.h  vlink.c  vlink.h
src/libsodium/: CMakeLists.txt
test/: main.c
